Took buttondetails out of containerdisplay, fixed styling

--- a/src/Components/Cards/MiniCard.module.css
+++ b/src/Components/Cards/MiniCard.module.css
@@ -46,7 +46,7 @@
   }
 .buttoncontainer {
        display: flex;
-      
+      background-color: #010622;
        justify-content: center;
        align-items: center;
   
